- https://github.com/eclipse-syson/syson/issues/1685[#1685] [explorer] Forbid the creation of a standard diagram on a `ViewUsage` with a standard diagram.
Remove the Delete tool from the context menu of a standard diagram.
Users will have to delete the `ViewUsage` from the _Explorer_ view to delete the associated diagram.
Remove the Duplicate tool from the context menu of a standard diagram.


=== New features

- https://github.com/eclipse-syson/syson/issues/1581[#1581] [diagrams] Display inherited `PortUsages` as graphical border nodes in diagrams.
- https://github.com/eclipse-syson/syson/issues/1581[#1581] [diagrams] Redefine inherited `PortUsages` when connected as graphical border nodes.
- https://github.com/eclipse-syson/syson/issues/1589[#1589] [explorer] Add a filter to hide expose elements in `ViewUsage`.
- https://github.com/eclipse-syson/syson/issues/1587[#1587] [diagrams] Handle `ActionUsage` and `ActionDefinition` parameters as graphical border nodes.
- https://github.com/eclipse-syson/syson/issues/1628[#1628] [services] Introduce new services organization.
https://doc.mbse-syson.org/syson/main/developer-guide/index.html#services_organization[See the developer guide in the documentation for more details].
Also introduces new `ServiceMethod` helper class to build AQL service call expressions from type-safe Java method references instead of hardcoded strings.
- https://github.com/eclipse-syson/syson/issues/1606[#1606] [explorer] Display the _shortName_ of `Elements` as part of the label in the _Explorer_ view.
- https://github.com/eclipse-syson/syson/issues/1638[#1638] [diagrams] Add the capability to put an `Element` graphical node inside a `ViewUsage` in diagrams

== v2025.10.0

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/1314[#1314] [diagrams] (Almost) All node descriptions are now synchronized (based on the exposed elements of _ViewUsages_).