@@ -312,6 +312,7 @@ a|release-notes-gv-do-not-display-twice-1.png[GV do not display twice, width=50%
 * Forbid the creation of a standard diagram on a `ViewUsage` which already has a standard diagram. Standard diagrams are based on the `ViewDefinitions` that are types of `ViewUsage`, so It was not logical to allow the creation of a standard diagram on a `ViewUsage` that already has a standard diagram.
 * Remove the _Delete_ tool from the context menu of a standard diagram. Users will have to delete the `ViewUsage` from the _Explorer_ view to delete the associated diagram.
 * Remove the _Duplicate_ tool from the context menu of a standard diagram. It was not logical to duplicate a diagram associated to a `ViewUsage`.
+- In diagrams, add _New Documentation_ tool on `Package` graphical nodes.
 
 == Technical details
 
