@@ -119,6 +119,7 @@ In addition, two new tools are added to the palette of the _General View_ diagra
 Remove the Delete tool from the context menu of a standard diagram.
 Users will have to delete the `ViewUsage` from the _Explorer_ view to delete the associated diagram.
 Remove the Duplicate tool from the context menu of a standard diagram.
+- https://github.com/eclipse-syson/syson/issues/1686[#1686] [diagram] Add _New Documentation_ tool on `Package` graphical nodes in standard diagrams.
 
 
 === New features
